--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,7 @@
-body {
-  color: #ccc;
-  background-color: #222;
-  text-align: center;
+.btn-grid {
+    margin: -2px 0;
+}
+
+.btn-grid > .btn {
+    margin: 2px 0;
 }
